pxc/tests/test_002_type/constmemfunc.px
public namespace constmemfunc;
import core::common -;

function int foo(int x) const { // error
  return 3 + x;
}

println(foo(3));
